Fix: fixed site bug in console caused by main.js that was giving error of not being able to read addEventListener of null by removing eventlistener and adding onclick attribute in get-help.html. Also fixed bug on iphone that had all input fields border radiuses still visible. Updated README to do list to reflect updates

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -362,7 +362,7 @@ body {
     box-shadow: none;
     outline: none;
     border: none;
-    border-radius: none;
+    border-radius: 0px;
     height: 40px;
     border-bottom: 2px solid #f5f5f5;
     background: transparent;
